fix(styling): spacing

--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -91,8 +91,8 @@ section {
 		scroll-margin-top: rem(12);
 	}
 	@media (min-width: $from-big) {
-		margin: rem(18) 0;
-		scroll-margin-top: rem(18);
+		margin: rem(14) 0;
+		scroll-margin-top: rem(14);
 	}
 }
 
